Java 1.5 : Replacing raw Vector with List<> and ArrayList<>